# esp-now-ant-bms

./: .gitmodules  README.md  config.cmake  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  espnow.cpp  espnow.h  main.cpp
main/antbms/: antbms.cpp  antbms.h  datastructure.h
main/helpers/: crc16.cpp  crc16.h  format_hex_pretty.cpp  format_hex_pretty.h
patches/: 0001-Fix-compilation.patch  apply-patches.sh
